--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -131,7 +131,7 @@ Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino
 
 \abstract
 {Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, albedo and composition, to trace back their true origin. The best ground-based technique to constrain those parameters is the observation of stellar occultations by these objects.}
-{We aim to predict stellar occultations for the seven biggest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda; the irregular satellite of Saturn: Phoebe; and the satellites of Neptune: Nereid and Triton.}
+{We aim to predict stellar occultations for the eight biggest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda; the irregular satellite of Saturn: Phoebe; and the satellites of Neptune: Nereid and Triton.}
 {We identified candidates to stellar occultations by the irregular satellites from the UCAC4 catalogue and from a catalogue of stars in the sky-path of Neptune obtained from observations made with the ESO2p2/WFI (2.2 m Max-Planck ESO telescope with the Wide Field Imager) instrument. These catalogues were crossed with the ephemeris of the satellites to identify stellar occultations. We used a new ephemeris based solely on the observations from \cite{GomesJunior2015} to generate quick predictions for the short-time future for the satellites of Jupiter. For Phoebe, Nereid and Triton we used the JPL ephemeris.}
 {We managed to identify 687 candidates of stellar occultations between the period of January, 2015 and December, 2017. We made observational tests for the predictions of the events of Himalia in March 03, 2015 and Elara in March 30, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions.}
 {The comparisons between the predictions and the observation tests show a good agreement. We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.}
@@ -161,7 +161,7 @@ The region of origin of these object is not well known. \cite{Grav2003} and \cit
 
 In order to obtain precise fundamental physical parameters like size, shape and albedo for the irregular satellites and thus to contribute to the study of their origin, we want to observe stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
 
-No observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have prevented earlier tries. But, in fact, given their distances to us, current ephemeris and star positions are already good enough for the prediction of the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, the cumulated uncertainty of ephemeris and star position1 must be around 40 mas to get good chances of observing a stellar occultation, which is quite feasible today.
+No observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have prevented earlier tries. But, in fact, given their distances to us, current ephemeris and star positions are already good enough for the prediction of the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, the cumulated uncertainty of ephemeris and star position must be around 40 mas to get good chances of observing a stellar occultation, which is quite feasible today.
 
 \begin{table}
 \caption{\label{Tab: satellite-diameter} Estimated diameter of the satellites and correspondent apparent diameter}
@@ -195,13 +195,13 @@ Triton & 124 & $2707 \pm 2.0$\tablefootmark{c} & 5 \tabularnewline
 \par
 \end{table}
 
-From what we have just presented, we can think that the obsevation of an stellar occultation by an irregular satellite should be likelier than occultations by TNOs.. The orbits of their host planets are well known and their observation time-span covers many orbital periods, contrary to TNOs.
+From what we have just presented, we can think that the observation of an stellar occultation by an irregular satellite should be likelier than occultations by TNOs. The orbits of their host planets are well known and their observation time-span covers many orbital periods, contrary to TNOs.
 %Unlike stellar occultations by TNOs, which nevertheless have been proved effective, the observation of an occultation by a irregular satellite is, in principle, more favorable. The orbits of their host planets are well known and these satellites have been observed completing already many orbital periods around them, thus presenting better ephemeris than TNOs. 
-Moreover, the irregular satellites are closer to Earth which means a minor localization error in kilometers.
+Moreover, the irregular satellites are closer to Earth which means a minor localization error in kilometer.
 
 \cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path. Using the positions obtained by \cite{GomesJunior2015} we produced a specific ephemeris for short-time future for the satellites of Jupiter and better predict stellar occultations for these objects.
 
-We present in this paper stellar occultation predictions for the 7 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke and Sinope), Phoebe from Saturn and Nereid and Triton from Neptune. In the section \ref{Sec: Rationale} we explore the scientific rationale for the study of the irregular satellites and the possibility of having a common origin with TNOs. In section \ref{Sec: integration} we show the the process of th productin of the new ephemeris. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to confirm the predictions are presented in section \ref{Sec: testes} and the final discussion are in section \ref{Sec: discussion}.
+We present in this paper stellar occultation predictions for the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda), Phoebe from Saturn and Nereid and Triton from Neptune. In the section \ref{Sec: Rationale} we explore the scientific rationale for the study of the irregular satellites and the possibility of having a common origin with TNOs. In section \ref{Sec: integration} we show the the process of the production of the new ephemeris. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to confirm the predictions are presented in section \ref{Sec: testes} and the final discussion are in section \ref{Sec: discussion}.
 
 \section{Scientific Rationale} \label{Sec: Rationale}
 
@@ -238,6 +238,70 @@ Similarly to the irregular satellites, Triton was probably captured in the early
 
 %The databases are described in Sect. \ref{Sec: observations}. The astrometric procedures in Sect. \ref{Sec: reduction}. The obtained positions are presented in Sect \ref{Sec: positions} and analysed in Sect. \ref{Sec: comparison}. Conclusions are given in Sect. \ref{Sec: conclusions}.
 
+
+\section*{Introduction V2}
+
+Irregular satellites revolve around giant planets at large distances, on eccentric, highly inclined and frequently retrograde orbits. Because of these peculiar orbits, it is largely accepted that these objects did not form by accretion around of their planet, but were captured by their planets in the early solar system \citep{Sheppard2005}.
+
+There is no consensus for a single model explaining where the irregular satellites were formed. \cite{Cuk2004} showed that the progenitor of the Himalia group may have originated in heliocentric orbits similar to the Hilda asteroid group. \cite{Sheppard2005} stated that the irregular satellites may be some of the objects that were formed within the giant planets region.
+
+\cite{Grav2003} and \cite{Grav2007} showed that the irregular satellites from the giant planets have their colors and spectral slopes similar to C-, D- and P-type asteroids, Centaurs and trans-neptunian objects (TNOs). This suggests that they may have come from different locations in the early solar system.
+
+\cite{Sheppard2005} and \cite{Jewitt2007} also expose the possibility for the irregular satellites having their origin as comets or TNOs. TNOs are highly interesting objects that, due to their large heliocentric distances, may be highly preserved having their physical properties similar to those they had when they were formed \citep{Camargo2014}. This is even more true for the smaller objects, since in principle larger sizes favour physical differentiation processes in the body and vice-versa. However, due to the distance, the smaller TNOs from this region are more difficult to observe. A clever way to overcome this difficulty is to study  the much closer irregular satellites, under the hypothesis that they share a common origin with the small TNOs' population.
+
+Phoebe is the most studied irregular satellite. \cite{Clark2005} suggest that its surface is probably covered by material of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe is 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
+
+In order to obtain precise fundamental physical parameters like size, shape and albedo for the irregular satellites and thus to contribute to the study of their origin, we want to observe stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
+
+We present in this paper stellar occultation predictions for the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda), Phoebe from Saturn and Nereid and Triton from Neptune. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects.
+
+Triton is a uncommon satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit size is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded from the irregular satellites' class, but studied together by many authors \citep{Sheppard2005, Jewitt2007}. 
+
+Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. Differently, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main motivation to study Triton by stellar occultations is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007}.
+
+No observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have prevented earlier tries. But, in fact, given their distances to us, current ephemeris and star positions are already good enough for the prediction of the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, the cumulated uncertainty of ephemeris and star position must be around 40 mas to get good chances of observing a stellar occultation, which is quite feasible today.
+
+\begin{table}
+\caption{\label{Tab: satellite-diameter} Estimated diameter of the satellites and correspondent apparent diameter}
+\begin{centering}
+\begin{tabular}{lccc}
+\hline  \hline
+\multicolumn{4}{c}{Diameter of the satellites} \tabularnewline
+Satellite  & mas\tablefootmark{a}  & km & References \tabularnewline
+\hline
+Ananke & 8 & 29 & 1 \tabularnewline
+Carme & 13 & 46 & 1 \tabularnewline
+Elara & 24 & 86 & 1 \tabularnewline
+Himalia & 41 & $(150\times120) \pm 20$\tablefootmark{b} & 2 \tabularnewline
+Leda & 5 & 20 & 1 \tabularnewline
+Lysithea & 10 & 36 & 1 \tabularnewline
+Pasiphae & 17 & 62 & 1 \tabularnewline
+Sinope & 10 & 37 & 1 \tabularnewline
+\hdashline
+Phoebe & 32 & $212 \pm 1.4$\tablefootmark{b} & 3 \tabularnewline
+\hdashline
+Nereid & 15 & $340 \pm 50$\tablefootmark{c} & 4 \tabularnewline
+Triton & 124 & $2707 \pm 2.0$\tablefootmark{c} & 5 \tabularnewline
+\hline
+\end{tabular}
+\tablebib{
+(1) \cite{Rettig2001}; (2) \cite{Porco2003}; (3) \cite{Thomas2010}; (4) \cite{Thomas1991}; (5) \cite{Thomas2000}.}
+\end{centering}
+\tablefoottext{a}{Using a mean distance from Jupiter of 5 AU, from Saturn of 9 AU and from Neptune of 30 AU.}
+\tablefoottext{b}{From Cassini observation.}
+\tablefoottext{c}{From Voyager-2 observation.}
+\par
+\end{table}
+
+\cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path. Using the positions obtained by \cite{GomesJunior2015} we produced a specific ephemeris for short-time future for the satellites of Jupiter and better predict stellar occultations for these objects.
+
+From what we have just presented, we can think that the observation of an stellar occultation by an irregular satellite should be likelier than occultations by TNOs. The orbits of their host planets are well known and their observation time-span covers many orbital periods, contrary to TNOs.
+%Unlike stellar occultations by TNOs, which nevertheless have been proved effective, the observation of an occultation by a irregular satellite is, in principle, more favorable. The orbits of their host planets are well known and these satellites have been observed completing already many orbital periods around them, thus presenting better ephemeris than TNOs. 
+Moreover, the irregular satellites are closer to Earth which means a minor localization error in kilometer.
+
+In section \ref{Sec: integration} we show the the process of the production of the new ephemeris. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to confirm the predictions are presented in section \ref{Sec: testes} and the final discussion are in section \ref{Sec: discussion}.
+
+
 \section{Special tailored Ephemerides (STE) for Jupiter irregular satellites} \label{Sec: integration}
 
 \subsection{Observations used}
@@ -245,7 +309,7 @@ Similarly to the irregular satellites, Triton was probably captured in the early
 The last observations used to develop JPL current ephemeris of the irregular satellites of Jupiter were obtained in 2012 \citep{Jacobson2012}. As a result, the errors on the residuals of recent observations are too important for the ephemeris to accurately predict stellar occultations without any corrections. In order to have efficient ephemerides for predicting the stellar occultations by irregular satellites, we need predictions based on recent observations. This is why we decided to develop our own ephemeris based on the observations published in \cite{GomesJunior2015}.
 
 \cite{GomesJunior2015} published 6523 precise positions for 18 irregular satellites from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between 1992 and 2014. %They showed that the orbits of the irregular satellites of the giant planets have systematic errors.
-The offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. %These differences could be associated with errors in their orbital elements.
+Their offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. At the distance of Jupiter, this represents an difference bigger than 700 km in the shadow path of an occultation.%These differences could be associated with errors in their orbital elements.
 
 \subsection{Description of the model}
 
@@ -274,7 +338,6 @@ For an irregular satellite $i$, under the gravitational influence of Jupiter, th
  & \displaystyle +GM_J \nabla U_{\bar{l}\hat{J}} -\underbrace{\sum_{l=1}^\mathcal{N} Gm_l\nabla U_{\bar{l}\hat{J}}}_\mathtt{undirect perturbations}
 \end{array}
 \end{equation}
-
 where the oblateness potential seen by the body $i$ because of Jupiter is:
 \begin{equation}\begin{array}{ll}
 
@@ -289,18 +352,13 @@ U_{\bar{l}\hat{J}}=&\displaystyle -\frac{R_J^2 J_2}{r_{iJ}^3}\left(\frac{3}{2}\s
 The expressions of $\nabla_lU_{\bar{l}\, \hat{i}}$ and $\nabla_i U_{\bar{i}\, \hat{l}}.$ have been developed in \citet{Lainey2004}.The equations of motion are integrated with the numerical integrator RADAU \citep{Everhart1985}. 
 Our model was fitted to the observations through a least-squares procedure. The satellites were integrated one dynamical family at a time, to gain computing time, while losing minimum precision. Indeed, the interactions between satellites not belonging to the same dynamical family are negligible considering the short timespan of our integration. 
 
-The initial osculating elements at the origin of integration are presented in Table \ref{Tab: sat_ell}, while the residuals are presented in Fig \ref{Fig: residuals} for Himalia and Carme.
+The initial osculating elements at the origin of integration are presented in Table \ref{Tab: sat_ell}, while the residuals are presented in Fig \ref{Fig: residuals} for Himalia and Carme as representatives.
 
 \begin{figure*}
 \subfigure{\includegraphics[width=8.8cm]{figures/Himalia_resid.eps}   \label{Fig: residuals-Himalia}}
 \subfigure{\includegraphics[width=8.8cm]{figures/Carme_resid.eps}  \label{Fig: residuals-Carme}}
-\caption{Residuals of Himalia and Carme \label{Fig: residuals}}
+\caption{Residuals of the numerical integration for Himalia and Carme. \label{Fig: residuals}}
 \end{figure*}
-
-All the orbits determined for the satellites show satisfying residuals. %Yet, one of the satellites has a peculiar situation. Its small number of observations in our set means that its orbit is definitely loosely constrained. 
-The residuals are lower than those obtained with JPL ephemeris, but the accuracy of an ephemeris decreases when we get further from the time of observations. The main risk of divergence over time comes from the possible absence of long-term effects when fitting to a short timespan of observations. If that were the case, our ephemeris would diverge too quickly to be of any use. JPL ephemerides are fitted over all the available observations. As a result, they will diverge less quickly than our own. Though they are no longer precise enough for our use, they remain a precious reference to identify whether our own model presents a quick divergence. We compared our ephemeris to the JPL for all the Jupiter satellites we fitted, until 2017. The divergence between 2015 and 2018 is at most \textit{\color{red}insert value here} for \textit{\color{red}insert right satellite name here}. A example of this difference for satellites Himalia and \textit{\color{red}whichever satellite you want, if you want)} is presented in Figure \ref{JPL-STE}.
-
-The obtained ephemeris is hereafter refered as STE, for special-tailored ephemeris. 
 
 \begin{table*}
 \caption{Initial osculating elements for Jupiter irregular satellites at JD 2451545.0.% For Themisto's case, the small number of observations meant that the statistical uncertainty was even greater than the obtained elements, though the fitting proved satisfying. We decided to provide its elements with significant number comparable to the other satellite for information, but left it without uncertainty.
@@ -324,6 +382,17 @@ Ananke &  21683800  $\pm$ 7200  &     0.380 $\pm$ 0.002      &   172.29 $\pm$ 0.
 
 \end{center}
 \end{table*}
+
+All the orbits determined for the satellites show satisfying residuals. %Yet, one of the satellites has a peculiar situation. Its small number of observations in our set means that its orbit is definitely loosely constrained. 
+The residuals are lower than those obtained with JPL ephemeris, but the accuracy of an ephemeris decreases when we get further from the time of observations. The main risk of divergence over time comes from the possible absence of long-term effects when fitting to a short timespan of observations. If that were the case, our ephemeris would diverge too quickly to be of any use. JPL ephemerides are fitted over all the available observations. As a result, they will diverge less quickly than our own. Though they are no longer precise enough for our use, they remain a precious reference to identify whether our own model presents a quick divergence. We compared our ephemeris to the JPL for all the Jupiter satellites we fitted, until 2017. The divergence between 2015 and 2018 is at most 98 mas in $\Delta \alpha \cos \delta$ and 58 mas in $\Delta \delta$ for Himalia and 181 mas in $\Delta \alpha \cos \delta$ and 152 mas in $\Delta \delta$ for Carme. A example of this difference for satellites Himalia and Carme over time is presented in Figure \ref{Fig: JPL-STE}.
+
+\begin{figure*}
+\subfigure{\includegraphics[width=8.8cm]{figures/JPL_DEC_Himalia.eps}    \label{Fig: JPL-STE-Himalia}}
+\subfigure{\includegraphics[width=8.8cm]{figures/JPL_DEC_Carme.eps}  \label{Fig: JPL-STE-Carme}}
+\caption{Differences between the JUP300 JPL ephemeris and the special-tailored ephemeris for Himalia and Carme. \label{Fig: JPL-STE}}
+\end{figure*}
+
+The obtained ephemeris is hereafter refered as STE, for special-tailored ephemeris. 
 
 
 %Making a new model for the orbits of these objects would demand a lot of time and delay the publication of predictions of possible events to occur in the very near future. Thus, we utilized the positions obtained by \cite{GomesJunior2015} to identify error patterns in the ephemeris. The error patterns in right ascension and in declination could be used to extrapolate the offsets to the satellite ephemeris by the time of the predicted occultation, improving it. Plots of the offsets over true anomaly (see Fig. \ref{Fig:offxanom} for declination offsets of Carme, for instance) clearly show the systematic errors in the JPL ephemeris.
@@ -366,9 +435,9 @@ Ananke &  21683800  $\pm$ 7200  &     0.380 $\pm$ 0.002      &   172.29 $\pm$ 0.
 
 \section{Prediction of occultations} \label{Sec: predictions}
 
-The prediction of the occultations was made by crossing the stellar coordinates and proper motions of the UCAC4 catalogue \citep{Zacharias2013} with the special-tailored ephemeris for Jupiter satellites and JPL ephemeris for the others as presented in section \ref{Sec: integration}. The search for stellar candidates follows the same procedure as presented by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}.
+The prediction of the occultations was made by crossing the stellar coordinates and proper motions of the UCAC4 catalogue \citep{Zacharias2013} with the special-tailored ephemeris for Jupiter satellites (see Sec. \ref{Sec: integration}) and JPL ephemeris for the others. The search for stellar candidates follows the same procedure as presented by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}.
 
-We predicted occultation for the 7 major irregular satellites of Jupiter:  Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; Phoebe of Saturn and Triton and Nereid of Neptune.
+We predicted occultation for the 8 major irregular satellites of Jupiter:  Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope; Phoebe of Saturn and Triton and Nereid of Neptune.
 
 For Triton and Nereid, the candidates for stellar occultations in 2015 and 2016 was searched using the WFI catalogue in the same way as the predictions for Centaurs and TNOs occultations by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}. This catalogue contains the stars in the path of Neptune in the sky up to mid-2016. The catalogue was generated by observations made at the ESO 2p2 telescope (IAU code 809) using the Wide Field Imager (WFI) CCD mosaic detector. The filter used was the broad-band R filter ESO\#844 with $\lambda_c$ = 651.725 nm and $\Delta\lambda$ = 162.184 nm.
 
@@ -409,7 +478,7 @@ Occultations predicted using the UCAC4 catalogue and STE ephemeris.
 \begin{tabular}{cccrcccrcrr}
 \hline
 \hline
-d m Year~~~~h~~m~~~s & RA~~~(ICRS)~~~Dec & C/A & P/A & $\nu$ & {\it D} & R* & $\lambda$ & LST & $\mu_{\alpha*}$ & $\mu_{\delta}$ \tabularnewline
+d m Year~~~~h~~m~~~s & RA~~~(ICRS)~~~Dec & C/A & P/A & $\nu$ & {\it D} & $R^*$ & $\lambda$ & LST & $\mu_{\alpha*}$ & $\mu_{\delta}$ \tabularnewline
 \hline
 % & \multicolumn{2}{c}{Mean errors} & Nr & Nr &  UCAC4       \tabularnewline
 09 04 2016 03:58:19. & 11 14 36.7707 +07 39 20.7610 & 1.003 &  17.9 & -12.88 &  4.54 & 14.9 & 271. & 22:03 &  12. & -33. \tabularnewline 
@@ -422,14 +491,14 @@ d m Year~~~~h~~m~~~s & RA~~~(ICRS)~~~Dec & C/A & P/A & $\nu$ & {\it D} & R* & $\
 \hline
 \end{tabular}
 \par\end{centering}
-\textbf{Notes}. Entries included: day of the year and UTC time of the prediction; right ascension and declination of the occulted star - in the original table; C/A: the geocentric closest approach, in arcseconds; P/A: the planet position angle with respect to the occulted star at C/A, in degrees; $\nu$: velocity in plane of sky, in km s$^{-1}$: positive = prograde, negative = retrograde; {\it D}: planet range to Earth, in AU; R*: normalized magnitude to a common shadow velocity of 20 km s$^{-1}$ by the relationship $\textrm{R}* = \textrm{R}_{\textrm{actual}} + 2.5 \times \log 10 \left(\frac{\textrm{velocity}} {20 \textrm{km}\, \textrm{s}^{-1}} \right)$; $\lambda$: east longitude of subplanet point in degrees, positive towards east; LST: UT + $\lambda$: local solar time at subplanet point, hh:mm; $\mu_{\alpha *}$ and $\mu_{\delta}$: proper motions in right ascension and declination, respectively (mas/year).
+\textbf{Notes}. Entries included: day of the year and UTC time of the prediction; right ascension and declination of the occulted star - in the original table; C/A: the geocentric closest approach, in arcseconds; P/A: the planet position angle with respect to the occulted star at C/A, in degrees; $\nu$: velocity in plane of sky, in km s$^{-1}$: positive = prograde, negative = retrograde; {\it D}: planet range to Earth, in AU; $R^*$: normalized magnitude to a common shadow velocity of 20 km s$^{-1}$ by the relationship $\textrm{R}^* = \textrm{R}_{\textrm{actual}} + 2.5 \times \log 10 \left(\frac{\textrm{velocity}} {20 \textrm{km}\, \textrm{s}^{-1}} \right)$; $\lambda$: east longitude of subplanet point in degrees, positive towards east; LST: UT + $\lambda$: local solar time at subplanet point, hh:mm; $\mu_{\alpha *}$ and $\mu_{\delta}$: proper motions in right ascension and declination, respectively (mas/year).
 \label{Tab: occ-list}
 \end{table*}
 
 \begin{figure*}
 \begin{centering}
 \includegraphics[scale=0.4]{figures/Pasiphae_2016-04-09T03:58:19.png}   
-\caption{Occultation map for Himalia regarding to the first event sampled in Table \ref{Tab: occ-list}}
+\caption{Occultation map for Pasiphae regarding to the first event sampled in Table \ref{Tab: occ-list}}
 \label{Fig: ocultacao}
 \end{centering}
 \end{figure*}
@@ -447,11 +516,11 @@ Two occultation tests were performed, one by Himalia that occurred on March 3, 2
 \begin{enumerate}
 \item Prediction with the STE ephemeris (see Sec. \ref{Sec: integration}), and the nominal UCAC4 position of the star;
 \item Prediction with the JPL ephemeris and the nominal UCAC4 position of the star;
-\item From star and satellite offsets calculated from observations made a few days before the occultation when the objects were separated (different FOV);
+\item From star and satellite offsets calculated from observations made a few days before the occultation when the objects were separated (different FOVs);
 \item Same as 3 but with the star and the satellite close in the same FOV.
 \end{enumerate}
 
-Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps corresponding to each of the four situations for Himalia. The map \ref{Fig: occ-Himalia-STE} is for the situation 1 in the list above. Map \ref{Fig: occ-Himalia-JPL} using JPL ephemeris (situation 2). The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other. From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD. This was not necessary for testing the prediction.
+Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps corresponding to each of the four situations for Himalia. The map \ref{Fig: occ-Himalia-STE} is for the situation 1 in the list above. Map \ref{Fig: occ-Himalia-JPL} using JPL ephemeris (situation 2). The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart (situation 3). On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD (green point at the bottom of the maps). This was not necessary for testing the prediction.
 
 \begin{figure*}
 \begin{centering}
@@ -464,7 +533,7 @@ Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps correspondin
 \end{centering}
 \end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four maps suggesting that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four maps were 36s in time along the shadow path and 101km in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four maps suggesting that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four maps were 36s, which correspond to 120 mas, in time along the shadow path and 101km (31 mas) in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015.}
@@ -472,7 +541,7 @@ In this event, it is possible to see that the shade does not vary by much among 
 \begin{tabular}{lccc}
 \hline  \hline
 \multicolumn{4}{c}{Difference from STE prediction} \tabularnewline
-Method  & Instant of C/A*  & C/A & Map   \tabularnewline
+Method  & Instant of C/A  & C/A & Map   \tabularnewline
 \hline
 STE & 00:39:51 UTC & $0\farcs703$ & \ref{Fig: occ-Himalia-STE} \tabularnewline
 JPL & -26s & +11mas (36km) & \ref{Fig: occ-Himalia-JPL} \tabularnewline % (284km)
@@ -481,10 +550,11 @@ Mar. 03 Obs. & -36s & -09mas (29km) & \ref{Fig: occ-Himalia-off03mar} \tabularne
 \hline
 \end{tabular}
 \par\end{centering}
-*Closest Approach
+%*Closest Approach
 \end{table}
 
-The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 the star and satellite could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The largest differences between them were \textcolor{red}{74s} in time along the shadow path and \textcolor{red}{307km} perpendicular to it (see table \ref{Tab: comparison-Elara}).
+The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 the star and satellite could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. %Still, the differences between the maps obtained were relatively small. 
+The largest differences between them were 144s (186 mas) in time along the shadow path and 525 km (153 mas) perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015.}
@@ -496,8 +566,8 @@ Method  & Instant of C/A  & C/A  \tabularnewline
 \hline
 STE & 01:45:13 UTC & $1\farcs082$ \tabularnewline
 JPL & +02s & +57mas(195km) \tabularnewline
-Mar. 25 Obs. & s & mas (km) \tabularnewline
-Apr. 02 Obs. & s & mas (km) \tabularnewline
+Mar. 25 Obs. & -70s & +20mas (68km) \tabularnewline
+Apr. 02 Obs. & +74s & -96mas (330km) \tabularnewline
 \hline
 \end{tabular}
 \par\end{centering}
@@ -506,11 +576,11 @@ Apr. 02 Obs. & s & mas (km) \tabularnewline
 
 \section{Discussion} \label{Sec: discussion}
 
-We presented stellar occultations for the period of 2015-2017 for seven irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
+We presented stellar occultations for the period of 2015-2017 for eight irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
 
 The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}). From this, a total of 687 events were foreseen. 
 
-The probability of successfully observing an occultation is roughly the ratio of the satellite's diameter by the budget error of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012} would give 80\%-50\% probability of observing such an event by Himalia and $\approx$5\% for Ananke, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
+The probability of successfully observing an occultation is roughly the ratio of the satellite's diameter by the budget error of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas combined with a mean accuracy in the position of 30 mas for Himalia and 150 mas for Leda published in Table 2 of \cite{Jacobson2012} would give 80\%-50\% probability of observing such an event by Himalia and $\approx$3\% for Leda, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
 
 The tests made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event would probably have been observed successfully in case there were observers available in the shadow area. %Fig. \ref{Fig: occ-Himalia} shows the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} shows numerically the difference between the maps.
 A similar test was made for an occultation of Elara in March 30, 2015. %The difference between the maps in this case are listed in Table \ref{Tab: comparison-Elara}.
